# ymery-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  run.sh
.github/workflows/: cmake-multi-platform.yml  deploy-pages.yml  release.yml
android-editor/app/: build.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/ymery/: INSTALL.md  build-wgpu.sh  build.gradle  gradle.properties  settings.gradle
android/ymery-editor/: build.gradle  settings.gradle
android/ymery-editor/app/: build.gradle
android/ymery/app/: build.gradle
build-tools/android/ymery-editor/: .gitignore  gradlew
build-tools/android/ymery-editor/app/src/main/cpp/: CMakeLists.txt  main.cpp
build-tools/android/ymery/app/src/main/cpp/: CMakeLists.txt
build-tools/cmake/: EmscriptenNix.cmake
build-tools/release/: README.md  package-android.sh  package-linux.sh  package-macos.sh  package-web.sh  package-windows.ps1  package-windows.sh
build-tools/shared/: build-wgpu-desktop.sh  versions.env
build-tools/web/: generate-demos-json.sh  shell.html
demo/cpp/: CMakeLists.txt
demo/waveform/: app.yaml
examples/simple/: main.cpp
issues/2025.12.25-kernel-demo/: issue.md
issues/2025.12.25-layout-editor-implot/: issue.md
issues/2025.12.25-webgpu-resize-crash/: issue.md
issues/2025.12.26-ymery-widget-factory-bug/: issue.md
layout/: app.yaml
scripts/: build-wgpu-desktop.sh
src/: main.cpp
src/compat/: imgui_impl_wgpu_emscripten.cpp  webgpu_compat.h
src/ymery/: app-core.cpp  app.cpp  app.hpp  data_bag.cpp  data_bag.hpp  dispatcher.cpp  dispatcher.hpp  embedded.cpp  embedded.hpp  embedded_plugins.hpp  error_buffer.hpp  lang.cpp  lang.hpp  log_buffer.hpp  object.hpp  plugin.hpp  plugin_export.hpp  plugin_manager.cpp  plugin_manager.hpp  result.hpp  static_plugins.cpp  static_plugins.hpp  types.cpp  types.hpp  webasm.cpp  webasm.hpp  ymery.hpp
src/ymery/editor/: CMakeLists.txt  editor_app.cpp  editor_app.hpp  editor_canvas.cpp  editor_canvas.hpp  layout_model.cpp  layout_model.hpp  main.cpp  widget_tree.cpp  widget_tree.hpp
src/ymery/plugins/: CMakeLists.txt
src/ymery/plugins/backend/: CMakeLists.txt  alsa.cpp  coreaudio.cpp  data-tree.cpp  filesystem.cpp  jack.cpp  kernel.cpp  pipewire.cpp  simple-data-tree.cpp  simple-tree.cpp  sndfile.cpp  waveform.cpp
src/ymery/plugins/backend/filesystem/: CMakeLists.txt  common.cpp  common.hpp  device.cpp  tree.cpp
src/ymery/plugins/frontend/: CMakeLists.txt  bullet-text.cpp  button.cpp  button.meta.yaml  checkbox.cpp  checkbox.meta.yaml  child.cpp  child.meta.yaml  collapsing-header.cpp  collapsing-header.meta.yaml  color-button.cpp  color-edit.cpp  color-edit.meta.yaml  column.cpp  column.meta.yaml  combo.cpp  combo.meta.yaml  coolbar.cpp  coolbar.meta.yaml  dockable-window.cpp  docking-main-window.cpp  docking-split.cpp  drag-float.cpp  drag-int.cpp  errors-view.cpp  gizmo.cpp  gizmo.meta.yaml  group.cpp  group.meta.yaml  hello-imgui-app-menu-items.cpp  hello-imgui-main-window.cpp  hello-imgui-menu.cpp  hex-editor.cpp  im-anim.cpp  im-anim.meta.yaml  imgui-main-window.cpp  imnodes.cpp  imnodes.meta.yaml  implot-group.cpp  implot-group.meta.yaml  (+73 more)
src/ymery/plugins/frontend/debug/: CMakeLists.txt  errors-view.hpp  logs-view.hpp  main.cpp
src/ymery/plugins/frontend/editor/: CMakeLists.txt  canvas.cpp  code-preview.cpp  code-preview.hpp  data-editor.cpp  data-editor.hpp  editor.cpp  editor.hpp  main.cpp  preview.cpp  preview.hpp  properties.cpp  properties.hpp  shared_model.hpp  widget-tree.cpp  widget-tree.hpp
src/ymery/plugins/frontend/hex-editor/: CMakeLists.txt  hex-editor.hpp  main.cpp
src/ymery/plugins/frontend/im-anim/: CMakeLists.txt  anim.hpp  bezier.hpp  color-tween.hpp  easing-compare.hpp  float-tween.hpp  int-tween.hpp  main.cpp  noise.hpp  oscillate.hpp  shake.hpp  spring.hpp  text-stagger.hpp  transform.hpp  vec2-tween.hpp  wiggle.hpp
src/ymery/plugins/frontend/imcoolbar/: CMakeLists.txt  coolbar-item.hpp  coolbar.hpp  main.cpp
src/ymery/plugins/frontend/imgui/: CMakeLists.txt  bullet-text.hpp  button.hpp  checkbox.hpp  child.hpp  collapsing-header.hpp  color-button.hpp  color-edit.hpp  column.hpp  combo.hpp  dockable-window.hpp  docking-common.hpp  docking-main-window.hpp  docking-split.hpp  drag-float.hpp  drag-int.hpp  group.hpp  hello-imgui-app-menu-items.hpp  hello-imgui-main-window.hpp  hello-imgui-menu.hpp  imgui-main-window.hpp  indent.hpp  input-float.hpp  input-int.hpp  input-text.hpp  listbox.hpp  main-menu-bar.hpp  main.cpp  menu-bar.hpp  menu-item.hpp  menu.hpp  next-column.hpp  popup-modal.hpp  popup.hpp  progress-bar.hpp  radio-button.hpp  row.hpp  same-line.hpp  selectable.hpp  separator-text.hpp  (+13 more)
src/ymery/plugins/frontend/imgui-knobs/: CMakeLists.txt  knob.hpp  main.cpp
src/ymery/plugins/frontend/imgui-markdown/: CMakeLists.txt  main.cpp  markdown.hpp
src/ymery/plugins/frontend/imgui-node-editor/: CMakeLists.txt  main.cpp  node-editor.hpp  node-pin.hpp  node.hpp
src/ymery/plugins/frontend/imgui-toggle/: CMakeLists.txt  main.cpp  toggle.hpp
src/ymery/plugins/frontend/imguizmo/: CMakeLists.txt  gizmo.hpp  main.cpp
src/ymery/plugins/frontend/imnodes/: CMakeLists.txt  editor.hpp  input-attribute.hpp  link.hpp  main.cpp  node.hpp  output-attribute.hpp
src/ymery/plugins/frontend/implot/: CMakeLists.txt  line.hpp  main.cpp  plot.hpp  subplots.hpp
src/ymery/plugins/frontend/implot3d/: CMakeLists.txt  main.cpp  plot3d.hpp
src/ymery/plugins/frontend/imspinner/: CMakeLists.txt  main.cpp  spinner.hpp
src/ymery/plugins/frontend/node-graph/: CMakeLists.txt  main.cpp  node-graph.hpp
src/ymery/plugins/frontend/nodes/: CMakeLists.txt  main.cpp  nodes.hpp
src/ymery/plugins/frontend/piano/: CMakeLists.txt  main.cpp  piano.hpp
src/ymery/plugins/frontend/shader-toy/: CMakeLists.txt  main.cpp  shader-toy.hpp
test/gui/: CMakeLists.txt  basic_widget_tests.cpp  filesystem_tests.cpp  gui_test_main.cpp  tree_node_tests.cpp
test/ut/: CMakeLists.txt  foreach_child_test.cpp  kernel_test.cpp  plugin_manager_test.cpp  waveform_test.cpp
(+112 files in other folders)
